--- a/Russian/main/MiuiScreenRecorder.apk/res/values-ru/arrays.xml
+++ b/Russian/main/MiuiScreenRecorder.apk/res/values-ru/arrays.xml
@@ -23,9 +23,9 @@
         <item>60 к/с</item>
     </string-array>
     <string-array name="screenrecorder_settings_orientation">
-        <item>Авто</item>
-        <item>Вертикально</item>
-        <item>Горизонтально</item>
+        <item>Автоматическая</item>
+        <item>Вертикальная</item>
+        <item>Горизонтальная</item>
     </string-array>
     <string-array name="screenrecorder_settings_sound">
         <item>Без звука</item>
