--- a/Russian/main/InCallUI.apk/res/values-ru/plurals.xml
+++ b/Russian/main/InCallUI.apk/res/values-ru/plurals.xml
@@ -4,6 +4,10 @@
         <item quantity="other">Подключение для передачи данных отсутствует %s мин.</item>
         <item quantity="one">Подключение для передачи данных отсутствует %s мин.</item>
      </plurals>
+	 <plurals name="livetalk_left_minute">
+        <item quantity="other">Осталось минут: %d</item>
+        <item quantity="one">Осталось минут: %d</item>
+     </plurals>
 	 <plurals name="call_recording_notification_complete">
         <item quantity="other">Записано вызовов: %d</item>
         <item quantity="one">Записано вызовов: 1</item>
