--- a/Russian/main/SecurityCenter.apk/res/values-ru/plurals.xml
+++ b/Russian/main/SecurityCenter.apk/res/values-ru/plurals.xml
@@ -4,6 +4,14 @@
         <item quantity="other">Приложения без отслеживания трафика: %d</item>
         <item quantity="one">Приложения без отслеживания трафика: %d</item>
     </plurals>
+	<plurals name="st_show_num_keyword">
+        <item quantity="other">%d</item>
+        <item quantity="one">%d</item>
+     </plurals>
+     <plurals name="st_show_num_number">
+        <item quantity="other">%d</item>
+        <item quantity="one">%d</item>
+     </plurals>
 	<plurals name="fw_blocked_count_call">
         <item quantity="other">%d вызовов</item>
         <item quantity="one">1 вызов</item>
