--- a/Russian/main/CleanMaster.apk/res/values-ru/plurals.xml
+++ b/Russian/main/CleanMaster.apk/res/values-ru/plurals.xml
@@ -8,6 +8,10 @@
         <item quantity="few">Просмотров: %1$d</item>
         <item quantity="many">Просмотров: %1$d</item>
      </plurals>
+	 <plurals name="resutl_function_install_app_summary">
+        <item quantity="other">"&lt;Data>&lt;font color=#ff0000 >%d&lt;/font> приложений не использовалось в течение длительного времени. Посмотрите&lt;/Data>"</item>
+		<item quantity="other">"&lt;Data>&lt;font color=#ff0000 >%d&lt;/font> приложение не использовалось в течение длительного времени. Посмотрите.&lt;/Data>"</item>
+     </plurals>
 	 <plurals name="app_usage_day">
         <item quantity="other">Не использовалось: %d дн.</item>
         <item quantity="one">Не использовалось: %d дн.</item>
