--- a/Russian/main/Browser.apk/res/values-ru/plurals.xml
+++ b/Russian/main/Browser.apk/res/values-ru/plurals.xml
@@ -6,6 +6,7 @@
      </plurals>
      <plurals name="last_num_days">
         <item quantity="other">Последние %d дн.</item>
+		<item quantity="one">Последние %d дн.</item>
      </plurals>
      <plurals name="matches_found">
         <item quantity="other">%1$d из %2$d</item>
